Fix main overflow

--- a/css/scss/base/_base.scss
+++ b/css/scss/base/_base.scss
@@ -2,11 +2,12 @@
   box-sizing: border-box;
 }
 
-html, body {
+html {
   height: 100%;
 }
 
 body {
+  min-height: 100%;
   display: flex;
   flex-direction: column;
 
